# vesting-halving-program

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  MAINNET_DEPLOYMENT.md  README.md  SECURITY.md  test-auto-advance.js  test-halving.js  test-vesting-halving.js  verification-badge.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  USAGE_GUIDE.md
programs/halving_program/: Cargo.toml
programs/halving_program/src/: lib.rs
tests/: halving_program.ts  test-halving.ts
