[package]
name = "halving-program"
version = "1.0.0"
description = "Vesting-based halving token schedule for X1 blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "halving_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"
